fix all the things